--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Japanese Typing Practice - Animals</title>
+  <title>Japanese Typing Game - Main Portal</title>
   <style>
-    /* Reset some defaults */
     body, html {
       margin: 0;
       padding: 0;
       height: 100%;
-    }
-
-    body {
       font-family: 'Roboto', sans-serif;
       background-color: #f5f5f5;
       color: #333;
@@ -20,28 +16,74 @@
       justify-content: center;
       align-items: center;
       height: 100%;
-      transition: background-color 0.3s ease-in-out;
     }
 
     .container {
-      width: 100%;
-      max-width: 800px;
-      padding: 20px;
+      text-align: center;
+      padding: 40px;
       background-color: #ffffff;
       border-radius: 12px;
       box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      animation: fadeIn 0.5s ease-out;
+      width: 100%;
+      max-width: 700px;
     }
 
     h1 {
-      font-size: 32px;
+      font-size: 36px;
       color: #4CAF50;
       margin-bottom: 20px;
     }
 
-    #word {
-      font-size: 36px;
-      font-weight: bold;
-      color: #444;
-      margin: 30px 0;
+    .category-button {
+      display: inline-block;
+      background-color: #4CAF50;
+      color: white;
+      padding: 15px 30px;
+      font-size: 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      margin: 10px 0;
+      transition: background-color 0.3s ease;
+    }
+
+    .category-button:hover {
+      background-color: #45a049;
+    }
+
+    .category-button:active {
+      background-color: #388e3c;
+    }
+
+    .category-container {
+      margin-top: 20px;
+    }
+
+    .category-button-container {
+      margin: 15px;
+    }
+  </style>
+</head>
+<body>
+
+<div class="container">
+  <h1>Welcome to Japanese Typing Game</h1>
+  <p>Select a category to start typing practice:</p>
+
+  <div class="category-container">
+    <div class="category-button-container">
+      <a href="animals.html" class="category-button">Animals</a>
+    </div>
+    <div class="category-button-container">
+      <a href="food.html" class="category-button">Food</a>
+    </div>
+    <div class="category-button-container">
+      <a href="jlptN5.html" class="category-button">JLPT N5</a>
+    </div>
+    <div class="category-button-container">
+      <a href="jlptN1.html" class="category-button">JLPT N1</a>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
