--- a/animal.html
+++ b/animal.html
@@ -101,6 +101,14 @@
 <body class="dark-mode">
   <div class="container">
     <h1>Japanese Typing Practice - Animals</h1>
+
+    <!-- Back to Main Portal Button -->
+    <div class="button-container">
+      <a href="index.html">
+        <button>Back to Main Portal</button>
+      </a>
+    </div>
+
     <div id="word"></div>
     <input type="text" id="answer" placeholder="Type your answer here" autocomplete="off" />
     <div id="feedback"></div>
