--- a/answer.html
+++ b/answer.html
@@ -69,7 +69,7 @@
 
     // Go back to the quiz page when the button is clicked
     function goBack() {
-      window.location.href = "index.html";
+      window.location.href = "animals.html";
     }
   </script>
 
