--- a/animalsanswer.html
+++ b/animalsanswer.html
@@ -55,17 +55,33 @@
   </div>
 
   <script>
-    // Retrieve the last word object from sessionStorage
-    const lastWord = JSON.parse(sessionStorage.getItem("lastWord"));
+    // Get the word passed in the URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const answer = urlParams.get("answer");
 
-    if (lastWord) {
-      // Display the Japanese word and the definition (or an alternative if not available)
-      document.getElementById("japanese").textContent = lastWord.japanese || "No answer found";
-      document.getElementById("english").textContent = lastWord.definition || "No definition found";
-    } else {
-      document.getElementById("japanese").textContent = "No word found";
-      document.getElementById("english").textContent = "No definition found";
+    async function fetchAnimalsData() {
+      try {
+        const response = await fetch("animals.json");
+        const animals = await response.json();
+
+        const wordData = animals.find(item => item.japanese === answer);
+
+        if (wordData) {
+          document.getElementById("japanese").textContent = wordData.japanese || "No answer found";
+          document.getElementById("english").textContent = wordData.english || "No definition found";
+        } else {
+          document.getElementById("japanese").textContent = "Word not found";
+          document.getElementById("english").textContent = "Definition not available";
+        }
+      } catch (error) {
+        console.error("Error fetching animals.json:", error);
+        document.getElementById("japanese").textContent = "Error";
+        document.getElementById("english").textContent = "Could not load data";
+      }
     }
+
+    // Run the function to fetch data on page load
+    fetchAnimalsData();
 
     // Go back to the quiz page when the button is clicked
     function goBack() {
