--- a/animals.html
+++ b/animals.html
@@ -65,15 +65,22 @@
       showWord();
     }
 
-    function showWord() {
-      const word = words[currentIndex];
-      document.getElementById('word').textContent = word.english;
-      input.value = '';
-      input.classList.remove('submitted-correct', 'submitted-incorrect');
-      document.getElementById('feedback').textContent = '';
-      input.disabled = false;
-      input.focus();
-    }
+function showWord() {
+  if (currentIndex >= words.length) {
+    alert("You've completed all the questions!");
+    sessionStorage.removeItem("quizProgress"); // ✅ Clear saved progress
+    currentIndex = 0;
+    score = 0;
+    shuffleWords(words);
+  }
+  const word = words[currentIndex];
+  document.getElementById('word').textContent = word.english;
+  input.value = '';
+  input.classList.remove('submitted-correct', 'submitted-incorrect');
+  document.getElementById('feedback').textContent = '';
+  input.disabled = false;
+  input.focus();
+}
 
     function shuffleWords(array) {
       for (let i = array.length - 1; i > 0; i--) {
@@ -83,29 +90,29 @@
     }
 
     function checkAnswer() {
-      const userInput = input.value.trim();
-      const currentWord = words[currentIndex];
-      if (currentWord.answers.includes(userInput)) {
-        input.classList.add('submitted-correct');
-        score++;
-        setTimeout(() => {
-          // Save the current progress to sessionStorage before navigating to the answer page
-          saveProgress();
-          window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
-        }, 500);
-      } else {
-        input.classList.add('submitted-incorrect');
-        document.getElementById('feedback').textContent = '❌ Try again!';
-      }
-      updateScore();
-    }
-
-    function skipWord() {
-      const word = words[currentIndex];
-      // Save the current progress to sessionStorage before navigating to the answer page
+  const userInput = input.value.trim();
+  const currentWord = words[currentIndex];
+  if (currentWord.answers.includes(userInput)) {
+    input.classList.add('submitted-correct');
+    score++;
+    currentIndex++; // ✅ Move to the next word
+    setTimeout(() => {
       saveProgress();
-      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
-    }
+      window.location.href = `animalsanswer.html?answer=${encodeURIComponent(currentWord.japanese)}&definition=${encodeURIComponent(currentWord.english)}`;
+    }, 500);
+  } else {
+    input.classList.add('submitted-incorrect');
+    document.getElementById('feedback').textContent = '❌ Try again!';
+  }
+  updateScore();
+}
+
+   function skipWord() {
+  const word = words[currentIndex];
+  currentIndex++; // ✅ Move to the next word even when skipping
+  saveProgress();
+  window.location.href = `animalsanswer.html?answer=${encodeURIComponent(word.japanese)}&definition=${encodeURIComponent(word.english)}`;
+}
 
     function showHint() {
       const word = words[currentIndex];
